fixed image overflow

--- a/css/main.css
+++ b/css/main.css
@@ -541,8 +541,9 @@ html.light-theme .theme-switch:hover .clickme-arrow, body.light-theme .theme-swi
     background-image: url("/assets/images/index.png");
     width: 45%;
     max-width: 580px;
-    opacity: 70%;
+    opacity: 90%;
     top: 350px;
+    right: 0px;
   }
 }
 
