--- a/css/sass/_home.scss
+++ b/css/sass/_home.scss
@@ -22,8 +22,9 @@
     background-image: url('/assets/images/index.png');
     width: 45%;
     max-width: 580px;
-    opacity: 70%;
+    opacity: 90%;
     top: 350px;
+    right: 0px;
   } 
 }
 
